@@ -1,3 +1,8 @@
+2008-02-15  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* src/plugins/youtube/youtube.py: Fix YouTube searches which
+	produce no results. (Closes: #516236)
+
 2008-02-14  Bastien Nocera  <hadess@hadess.net>
 
 	* browser-plugin/totemConePlugin.cpp:
